# mcp-cortellis

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: publish.yml
cortellis_mcp/: __init__.py  __main__.py
docs/: API.md
examples/: search_obesity_drugs.py
